# rs-gax

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  requirements.txt  t.py
benches/: benchmark.rs
data/: convert.gaf  convert.gam  example.gam  example.gamp
gax/: __init__.py  __init__.pyi  definitions.py  gaf.pyi  gam.pyi  gamp.pyi
src/: framing.rs  gaf.rs  gam.rs  gamp.rs  graph.rs  lib.rs  main.rs
src/bindings/: dict.rs  gaf.rs  gam.rs  gamp.rs  graph.rs  mod.rs
