[package]
name = "rs-gax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
bytes = "1.2.1"
prost = "0.11"
prost-types = "0.11"

[build-dependencies]	
prost-build = { version = "0.11" }
