[package]
name = "rs-gax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gax"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "benchmark"
harness = false

[dependencies]
regex = "1.6.0"
bytes = "1.2.1"
prost = "0.11"
prost-types = "0.11"
flate2 = "1.0.25"
thiserror = "1.0.37"
pyo3 = { version = "0.17.3", features = ["extension-module", "multiple-pymethods"] }
concat-idents = "1.1.4"
gfa = "0.10.1"

[build-dependencies]
prost-build = { version = "0.11" }

[dev-dependencies]
criterion = "0.4.0"
